MOBI-508 menuButton layout issues - update fixed widths of span and select to align
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@32069 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/base/1_menubutton.css
+++ b/resources/themes/base/1_menubutton.css
@@ -34,7 +34,8 @@
 }
 
 .mobi-menu-btn-menu {
-    width: 190px;
+    width: 160px;
     z-index: 5;
+    height: 30px;
 }
 
